<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:title="@string/backup_restore">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/backup_options">

        <Preference
            app:icon="@drawable/ic_autorenew"
            app:key="backup_compression_method"
            app:title="@string/pref_compression_method"
            tools:summary="Current method: GZip" />

        <Preference
            app:icon="@drawable/ic_check_circle"
            app:key="backup_flags"
            app:title="@string/backup_options"
            app:summary="@string/pref_backup_flags_msg" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/security">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_database"
            app:key="backup_android_keystore"
            app:title="@string/pref_backup_android_keystore"
            app:summary="@string/pref_backup_android_keystore_msg" />

        <Preference
            app:icon="@drawable/ic_content_save"
            app:key="encryption"
            app:title="@string/encryption"
            app:summary="@string/pref_encryption_msg" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/storage">

        <Preference
            app:icon="@drawable/ic_database"
            app:key="backup_volume"
            app:title="@string/backup_volume"
            app:summary="@string/pref_backup_volume_msg" />

        <Preference
            app:icon="@drawable/ic_file_import"
            app:key="import_backups"
            app:title="@string/pref_import_backups"
            app:summary="@string/pref_import_backups_msg" />

    </PreferenceCategory>

</PreferenceScreen>