<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/security">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_eye"
            app:key="enable_screen_lock"
            app:title="@string/screen_lock"
            app:summary="@string/screen_lock_msg" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_autorenew"
            app:key="enable_persistent_session"
            app:title="@string/pref_enable_persistent_session"
            app:summary="@string/pref_enable_persistent_session_msg" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_block"
            app:key="enable_auto_lock"
            app:title="@string/pref_enable_auto_lock"
            app:summary="@string/pref_enable_auto_lock_msg" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/net_policy">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_autorenew"
            app:key="toggle_internet"
            app:title="@string/toggle_internet"
            app:summary="@string/pref_toggle_internet_msg"
            app:persistent="false" />

        <Preference
            app:icon="@drawable/ic_check_circle"
            app:key="auth_manager"
            app:title="@string/auth_manager_title" />

    </PreferenceCategory>

</PreferenceScreen>