<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_cat_general">

        <Preference
            app:icon="@drawable/ic_contact_page"
            app:key="selected_users"
            app:title="@string/pref_selected_users"
            app:summary="@string/pref_selected_users_msg" />

        <Preference
            app:icon="@drawable/ic_edit"
            app:key="saved_apk_format"
            app:title="@string/pref_saved_apk_name_format"
            app:summary="@string/pref_saved_apk_name_format_msg" />

        <Preference
            app:icon="@drawable/ic_fast_forward"
            app:key="thread_count"
            app:title="@string/pref_thread_count"
            tools:summary="Execute at most 5 operations in parallel" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_autorenew"
            app:key="send_notifications_to_connected_devices"
            app:title="@string/pref_send_notifications_to_connected_devices"
            app:summary="@string/pref_send_notification_to_connected_devices_msg" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/wireless_debugging">

        <Preference
            app:icon="@drawable/ic_code"
            app:key="adb_local_server_port"
            app:title="@string/adb_local_server_port"
            tools:summary="60001" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/keystore">

        <Preference
            app:icon="@drawable/ic_database"
            app:key="import_export_keystore"
            app:title="@string/pref_import_export_keystore"
            app:summary="@string/pref_import_export_keystore_msg" />

    </PreferenceCategory>

</PreferenceScreen>