<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/mode">

        <Preference
            app:icon="@drawable/ic_snowflake"
            app:key="freeze_type"
            app:title="@string/pref_default_freezing_method" />

        <Preference
            app:icon="@drawable/ic_block"
            app:key="default_blocking_method"
            app:title="@string/pref_default_blocking_method" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_check_circle"
            app:key="global_blocking_enabled"
            app:title="@string/pref_global_blocking_enabled"
            app:summary="@string/pref_global_blocking_enabled_msg" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_import_export_blocking_rules">

        <Preference
            app:icon="@drawable/ic_file_export"
            app:key="import_export_rules"
            app:title="@string/pref_import_export_blocking_rules"
            app:summary="@string/pref_import_export_blocking_rules_msg"
            android:fragment="io.github.muntashirakon.AppManager.settings.ImportExportRulesPreferences" />

        <io.github.muntashirakon.preference.PrimaryButtonPreference
            app:key="remove_all_rules"
            app:title="@string/pref_remove_all_rules"
            app:icon="@drawable/ic_trash_can"/>

    </PreferenceCategory>

</PreferenceScreen>